Prepare for the JDK17 (#730)
* Separate server module

Signed-off-by: frank chen <frank.chen021@outlook.com>

* Fix pom

* Update component

* Update agent

* Fix feign dependency

* Fix webflux dependency

* Update docker file to support JRE17

* Change name to agnet-all

* Update docker README

* Fix dependency

* Fix dependency

---------

Signed-off-by: frank chen <frank.chen021@outlook.com>